apps/cepapi-ingress/deployment-cepapi.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cep
  labels:
    app: cep
spec:
  selector:
    matchLabels:
      app: cep
  replicas: 1
  template:
    metadata:
      labels:
        app: cep
    spec:
      containers:
      - name: echo
        image: viniciusfca/cepapi:latest
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          requests:
            cpu: 200m
