apps/cepapi-ingress/service-cepapi.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: cepapi-ingress-service
  labels:
    app: cepapi-ingress
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: cepapi-ingress
