apps/cepapi-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cep-ingress
  labels:
    app: cep
  annotations:
    konghq.com/plugins: keycloak-plugin
    konghq.com/preserve-host: "true"
    konghq.com/methods: GET,POST

spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /cep
        pathType: Prefix
        backend:
          service:
            name: cep-service
            port:
              number: 5000
